# BlockShuffler

./: .gitignore  BlockShuffler.jucer  BlockShuffler.pkgproj  BlockShuffler_Feature_Description.md  BlockShuffler_Test_Plan.md  BlockShuffler_Test_Plan_v2.md  CLAUDE.md  CMakeLists.txt  HANDOVER.md  README.md
.github/workflows/: build-windows.yml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: ArrangementResolver.cpp  ArrangementResolver.h  ExportRenderer.cpp  ExportRenderer.h  PlaybackEngine.cpp  PlaybackEngine.h  TempoStretcher.cpp  TempoStretcher.h
Source/Model/: Block.cpp  Block.h  BlockLink.cpp  BlockLink.h  Clip.cpp  Clip.h  Project.cpp  Project.h  Serialization.cpp  Serialization.h
Source/UI/: BlockComponent.cpp  BlockComponent.h  BlockLinkOverlay.cpp  BlockLinkOverlay.h  BlockStackView.cpp  BlockStackView.h  BlockStrip.cpp  BlockStrip.h  ClipListPanel.cpp  ClipListPanel.h  ClipWaveformView.cpp  ClipWaveformView.h  InspectorPanel.cpp  InspectorPanel.h  LookAndFeel_BlockShuffler.cpp  LookAndFeel_BlockShuffler.h  TransportBar.cpp  TransportBar.h
Source/Utils/: GridSnap.h  UuidGenerator.h  WeightedRandom.h
